[package]
name = "ring-lwe"
version = "0.1.7"
edition = "2021"
description = "Implements the ring learning-with-errors public key encrpytion scheme."
license = "MIT"
documentation = "https://docs.rs/ring-lwe"
homepage = "https://github.com/lattice-based-cryptography/ring-lwe"
repository = "https://github.com/lattice-based-cryptography/ring-lwe"
default-run = "ring-lwe"

[[bin]]
name = "ring-lwe"
path = "src/main.rs"

[[bin]]
name = "ring-lwe-server"
path = "src/server.rs"

[dependencies]
polynomial-ring = "0.5.1"
num-traits = "=0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
ntt = "0.1.9"
base64 = "0.21.7"
bincode = "1.3.3"
# Web framework for REST API
actix-web = "4.4"
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Environment variables
dotenv = "0.15"
# Logging
env_logger = "0.10"
log = "0.4"
# Error handling
anyhow = "1.0"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark_polymul"
path = "benches/benchmark_polymul.rs"
harness = false

[[bench]]
name = "benchmark_keygen"
path = "benches/benchmark_keygen.rs"
harness = false

[[bench]]
name = "benchmark_encrypt"
path = "benches/benchmark_encrypt.rs"
harness = false

[[bench]]
name = "benchmark_decrypt"
path = "benches/benchmark_decrypt.rs"
harness = false